# codex-chat-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  USAGE.md  conf.toml  conf.toml.example  package-lock.json  package.json
docs/: 20260508-responses-to-chat-format-review.md  codex-0134-profile-configuration.md
docs/plans/: 20260410-claude-code-ollama-parity.md
scripts/: check-version.sh  postinstall-build.cjs  run_bridge.sh  run_codex_with_bridge.sh  sync-version-from-cargo.cjs
src/: bridge_types.rs  config.rs  http_handlers.rs  lib.rs  logging_utils.rs  main.rs  model.rs  pipeline.rs  response_utils.rs  routing.rs  session.rs  state.rs  tests.rs
src/bridge/: apply_patch.rs  mapping.rs  mod.rs  streaming.rs
