[package]
name = "codex-chat-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-chat-bridge"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true, default-features = false, features = ["http1", "json", "tokio"] }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
reqwest = { workspace = true, features = ["stream", "json", "rustls-tls"], default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["v7"] }
