[package]
name = "codex-chat-bridge"
version = "0.1.12"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "codex-chat-bridge"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3.6"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = { version = "0.3", default-features = false }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v7"] }
